{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 2552,
  "lineage": "174abe17-3f0f-ca1a-5c01-9dcb6742a43b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cassandra_loader_us-east-1_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:630105558006:instance/i-0502f1efe154d8dcd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0502f1efe154d8dcd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c4.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "key_pair_us-east-1_sa_fs-cassandra-vs-scylla-009",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-037d9473eb75a23d4",
            "private_dns": "ip-10-1-0-199.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.199",
            "public_dns": "ec2-3-89-186-105.compute-1.amazonaws.com",
            "public_ip": "3.89.186.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07414aefa331b1e83",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f25b4d22abe5373e",
            "tags": {
              "Name": "fs-cassandra-vs-scylla-009_cassandra_loader_us-east-1_0",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "CassandraLoader"
            },
            "tags_all": {
              "Name": "fs-cassandra-vs-scylla-009_cassandra_loader_us-east-1_0",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "CassandraLoader"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5c591c863a4cd2c"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair_us-east-1",
            "aws_security_group.sg_us-east-1",
            "aws_subnet.subnet_us-east-1_0",
            "aws_vpc.vpc_us-east-1",
            "data.aws_ami.ubuntu_ami_us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cassandra_loader_us-east-1_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:630105558006:instance/i-0c5a13253771298ce",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c5a13253771298ce",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c4.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "key_pair_us-east-1_sa_fs-cassandra-vs-scylla-009",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0491e0a2addc0a201",
            "private_dns": "ip-10-1-1-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.100",
            "public_dns": "ec2-98-83-211-36.compute-1.amazonaws.com",
            "public_ip": "98.83.211.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e36e82e8b56cce4a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c882e4dcd71d027",
            "tags": {
              "Name": "fs-cassandra-vs-scylla-009_cassandra_loader_us-east-1_1",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "CassandraLoader"
            },
            "tags_all": {
              "Name": "fs-cassandra-vs-scylla-009_cassandra_loader_us-east-1_1",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "CassandraLoader"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5c591c863a4cd2c"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair_us-east-1",
            "aws_security_group.sg_us-east-1",
            "aws_subnet.subnet_us-east-1_1",
            "aws_vpc.vpc_us-east-1",
            "data.aws_ami.ubuntu_ami_us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cassandra_loader_us-east-1_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:630105558006:instance/i-0ae8003faca0a2235",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae8003faca0a2235",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c4.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "key_pair_us-east-1_sa_fs-cassandra-vs-scylla-009",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c55df32a916ca652",
            "private_dns": "ip-10-1-2-202.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.202",
            "public_dns": "ec2-100-27-40-205.compute-1.amazonaws.com",
            "public_ip": "100.27.40.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ee9a1df4c083b29",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c9c5c8b759b3c9af",
            "tags": {
              "Name": "fs-cassandra-vs-scylla-009_cassandra_loader_us-east-1_2",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "CassandraLoader"
            },
            "tags_all": {
              "Name": "fs-cassandra-vs-scylla-009_cassandra_loader_us-east-1_2",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "CassandraLoader"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5c591c863a4cd2c"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair_us-east-1",
            "aws_security_group.sg_us-east-1",
            "aws_subnet.subnet_us-east-1_2",
            "aws_vpc.vpc_us-east-1",
            "data.aws_ami.ubuntu_ami_us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cassandra_us-east-1_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:630105558006:instance/i-097aa9bf8dc0bbfea",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-097aa9bf8dc0bbfea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "i4i.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "key_pair_us-east-1_sa_fs-cassandra-vs-scylla-009",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dbca632eaa0192bd",
            "private_dns": "ip-10-1-0-139.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.139",
            "public_dns": "ec2-54-145-42-172.compute-1.amazonaws.com",
            "public_ip": "54.145.42.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01e861d76a5754f01",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f25b4d22abe5373e",
            "tags": {
              "Group": "CassandraSeed",
              "Name": "fs-cassandra-vs-scylla-009_us-east-1_cassandra_instance_0",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "Cassandra"
            },
            "tags_all": {
              "Group": "CassandraSeed",
              "Name": "fs-cassandra-vs-scylla-009_us-east-1_cassandra_instance_0",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "Cassandra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5c591c863a4cd2c"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair_us-east-1",
            "aws_security_group.sg_us-east-1",
            "aws_subnet.subnet_us-east-1_0",
            "aws_vpc.vpc_us-east-1",
            "data.aws_ami.ubuntu_ami_us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cassandra_us-east-1_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:630105558006:instance/i-06df0ade826fb9f81",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06df0ade826fb9f81",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "i4i.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "key_pair_us-east-1_sa_fs-cassandra-vs-scylla-009",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03225e3a239c4eeb5",
            "private_dns": "ip-10-1-1-150.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.150",
            "public_dns": "ec2-54-87-180-5.compute-1.amazonaws.com",
            "public_ip": "54.87.180.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0862e31e6dba7e451",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c882e4dcd71d027",
            "tags": {
              "Group": "CassandraNonSeed",
              "Name": "fs-cassandra-vs-scylla-009_us-east-1_cassandra_instance_1",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "Cassandra"
            },
            "tags_all": {
              "Group": "CassandraNonSeed",
              "Name": "fs-cassandra-vs-scylla-009_us-east-1_cassandra_instance_1",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "Cassandra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5c591c863a4cd2c"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair_us-east-1",
            "aws_security_group.sg_us-east-1",
            "aws_subnet.subnet_us-east-1_1",
            "aws_vpc.vpc_us-east-1",
            "data.aws_ami.ubuntu_ami_us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cassandra_us-east-1_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:630105558006:instance/i-0170df7c82c8d8adb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0170df7c82c8d8adb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "i4i.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "key_pair_us-east-1_sa_fs-cassandra-vs-scylla-009",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0197d325b5bbc016b",
            "private_dns": "ip-10-1-2-178.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.178",
            "public_dns": "ec2-35-175-124-85.compute-1.amazonaws.com",
            "public_ip": "35.175.124.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-037ef6dcc04b71ec3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c9c5c8b759b3c9af",
            "tags": {
              "Group": "CassandraNonSeed",
              "Name": "fs-cassandra-vs-scylla-009_us-east-1_cassandra_instance_2",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "Cassandra"
            },
            "tags_all": {
              "Group": "CassandraNonSeed",
              "Name": "fs-cassandra-vs-scylla-009_us-east-1_cassandra_instance_2",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "Cassandra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5c591c863a4cd2c"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair_us-east-1",
            "aws_security_group.sg_us-east-1",
            "aws_subnet.subnet_us-east-1_2",
            "aws_vpc.vpc_us-east-1",
            "data.aws_ami.ubuntu_ami_us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cassandra_us-east-1_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:630105558006:instance/i-0c0953a052c3913ce",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c0953a052c3913ce",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "i4i.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "key_pair_us-east-1_sa_fs-cassandra-vs-scylla-009",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c56957e8ac3a20f1",
            "private_dns": "ip-10-1-0-214.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.214",
            "public_dns": "ec2-98-81-184-102.compute-1.amazonaws.com",
            "public_ip": "98.81.184.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cc5848f86fe02214",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f25b4d22abe5373e",
            "tags": {
              "Group": "CassandraScale",
              "Name": "fs-cassandra-vs-scylla-009_us-east-1_cassandra_instance_3",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "Cassandra"
            },
            "tags_all": {
              "Group": "CassandraScale",
              "Name": "fs-cassandra-vs-scylla-009_us-east-1_cassandra_instance_3",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "Cassandra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5c591c863a4cd2c"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair_us-east-1",
            "aws_security_group.sg_us-east-1",
            "aws_subnet.subnet_us-east-1_0",
            "aws_vpc.vpc_us-east-1",
            "data.aws_ami.ubuntu_ami_us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cassandra_us-east-1_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:630105558006:instance/i-07e00b468a9ad03f3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e00b468a9ad03f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "i4i.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "key_pair_us-east-1_sa_fs-cassandra-vs-scylla-009",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09bcf75a3ad14a1d9",
            "private_dns": "ip-10-1-1-46.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.46",
            "public_dns": "ec2-54-197-222-129.compute-1.amazonaws.com",
            "public_ip": "54.197.222.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aeb409fc1cc361bb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c882e4dcd71d027",
            "tags": {
              "Group": "CassandraScale",
              "Name": "fs-cassandra-vs-scylla-009_us-east-1_cassandra_instance_4",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "Cassandra"
            },
            "tags_all": {
              "Group": "CassandraScale",
              "Name": "fs-cassandra-vs-scylla-009_us-east-1_cassandra_instance_4",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "Cassandra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5c591c863a4cd2c"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair_us-east-1",
            "aws_security_group.sg_us-east-1",
            "aws_subnet.subnet_us-east-1_1",
            "aws_vpc.vpc_us-east-1",
            "data.aws_ami.ubuntu_ami_us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cassandra_us-east-1_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:630105558006:instance/i-0f976da44ea19f800",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f976da44ea19f800",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "i4i.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "key_pair_us-east-1_sa_fs-cassandra-vs-scylla-009",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05593fbb66d01f212",
            "private_dns": "ip-10-1-2-69.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.69",
            "public_dns": "ec2-34-205-50-34.compute-1.amazonaws.com",
            "public_ip": "34.205.50.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-043cd26f9578989b7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c9c5c8b759b3c9af",
            "tags": {
              "Group": "CassandraScale",
              "Name": "fs-cassandra-vs-scylla-009_us-east-1_cassandra_instance_5",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "Cassandra"
            },
            "tags_all": {
              "Group": "CassandraScale",
              "Name": "fs-cassandra-vs-scylla-009_us-east-1_cassandra_instance_5",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "Cassandra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5c591c863a4cd2c"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair_us-east-1",
            "aws_security_group.sg_us-east-1",
            "aws_subnet.subnet_us-east-1_2",
            "aws_vpc.vpc_us-east-1",
            "data.aws_ami.ubuntu_ami_us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_us-east-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630105558006:internet-gateway/igw-02df758333f0e6cd0",
            "id": "igw-02df758333f0e6cd0",
            "owner_id": "630105558006",
            "tags": {
              "Name": "fs-cassandra-vs-scylla-009-us-east-1-IGW",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Name": "fs-cassandra-vs-scylla-009-us-east-1-IGW",
              "Region": "us-east-1"
            },
            "vpc_id": "vpc-0fe1de912920ef5b9"
          },
          "dependencies": [
            "aws_vpc.vpc_us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_us-east-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02df758333f0e6cd0",
            "id": "r-rtb-032e8231617ddf8d51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-032e8231617ddf8d5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_us-east-1",
            "aws_route_table.rt_us-east-1",
            "aws_vpc.vpc_us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_us-east-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630105558006:route-table/rtb-032e8231617ddf8d5",
            "id": "rtb-032e8231617ddf8d5",
            "owner_id": "630105558006",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fs-cassandra-vs-scylla-009-us-east-1-RouteTable",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Name": "fs-cassandra-vs-scylla-009-us-east-1-RouteTable",
              "Region": "us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe1de912920ef5b9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_us-east-1",
            "aws_vpc.vpc_us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_us-east-1_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b02287cd64edbcea",
            "route_table_id": "rtb-032e8231617ddf8d5",
            "subnet_id": "subnet-0f25b4d22abe5373e"
          },
          "dependencies": [
            "aws_internet_gateway.igw_us-east-1",
            "aws_route_table.rt_us-east-1",
            "aws_subnet.subnet_us-east-1_0",
            "aws_vpc.vpc_us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_us-east-1_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c7f9379a9d24643",
            "route_table_id": "rtb-032e8231617ddf8d5",
            "subnet_id": "subnet-02c882e4dcd71d027"
          },
          "dependencies": [
            "aws_internet_gateway.igw_us-east-1",
            "aws_route_table.rt_us-east-1",
            "aws_subnet.subnet_us-east-1_1",
            "aws_vpc.vpc_us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_us-east-1_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020f862aa50011374",
            "route_table_id": "rtb-032e8231617ddf8d5",
            "subnet_id": "subnet-0c9c5c8b759b3c9af"
          },
          "dependencies": [
            "aws_internet_gateway.igw_us-east-1",
            "aws_route_table.rt_us-east-1",
            "aws_subnet.subnet_us-east-1_2",
            "aws_vpc.vpc_us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_us-east-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630105558006:security-group/sg-0a5c591c863a4cd2c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5c591c863a4cd2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "CQL access",
                "from_port": 9042,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9042
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "JMX access",
                "from_port": 7199,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7199
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Monitoring access",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Node exp access",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Prometheus access",
                "from_port": 9180,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9180
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "REST access",
                "from_port": 10000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RPC SSL access",
                "from_port": 7001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RPC access",
                "from_port": 7000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSL CQL access",
                "from_port": 9142,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9142
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Shard-aware access",
                "from_port": 19042,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 19042
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Thrift access",
                "from_port": 9160,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9160
              }
            ],
            "name": "fs-cassandra-vs-scylla-009-sg-us-east-1",
            "name_prefix": "",
            "owner_id": "630105558006",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fs-cassandra-vs-scylla-009-SG-us-east-1",
              "Project": "fs-cassandra-vs-scylla-009",
              "Region": "us-east-1",
              "Type": "Security Group"
            },
            "tags_all": {
              "Name": "fs-cassandra-vs-scylla-009-SG-us-east-1",
              "Project": "fs-cassandra-vs-scylla-009",
              "Region": "us-east-1",
              "Type": "Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe1de912920ef5b9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_us-east-1_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630105558006:subnet/subnet-0f25b4d22abe5373e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f25b4d22abe5373e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "630105558006",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fs-cassandra-vs-scylla-009_us-east-1-VPC",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "VPC"
            },
            "tags_all": {
              "Name": "fs-cassandra-vs-scylla-009_us-east-1-VPC",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "VPC"
            },
            "vpc_id": "vpc-0fe1de912920ef5b9"
          },
          "dependencies": [
            "aws_vpc.vpc_us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_us-east-1_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630105558006:subnet/subnet-02c882e4dcd71d027",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c882e4dcd71d027",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "630105558006",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fs-cassandra-vs-scylla-009_us-east-1-VPC",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "VPC"
            },
            "tags_all": {
              "Name": "fs-cassandra-vs-scylla-009_us-east-1-VPC",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "VPC"
            },
            "vpc_id": "vpc-0fe1de912920ef5b9"
          },
          "dependencies": [
            "aws_vpc.vpc_us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_us-east-1_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630105558006:subnet/subnet-0c9c5c8b759b3c9af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9c5c8b759b3c9af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "630105558006",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fs-cassandra-vs-scylla-009_us-east-1-VPC",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "VPC"
            },
            "tags_all": {
              "Name": "fs-cassandra-vs-scylla-009_us-east-1-VPC",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "VPC"
            },
            "vpc_id": "vpc-0fe1de912920ef5b9"
          },
          "dependencies": [
            "aws_vpc.vpc_us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_us-east-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630105558006:vpc/vpc-0fe1de912920ef5b9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-03294f0f6555bf546",
            "default_route_table_id": "rtb-015c2f5091e1e08b1",
            "default_security_group_id": "sg-00b3205391a41e6f1",
            "dhcp_options_id": "dopt-0dc794e9bfae5deec",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fe1de912920ef5b9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-015c2f5091e1e08b1",
            "owner_id": "630105558006",
            "tags": {
              "Name": "fs-cassandra-vs-scylla-009_us-east-1-VPC",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "VPC"
            },
            "tags_all": {
              "Name": "fs-cassandra-vs-scylla-009_us-east-1-VPC",
              "Project": "fs-cassandra-vs-scylla-009",
              "Type": "VPC"
            }
          }
        }
      ]
    }
  ]
}